--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="container">
      <h3 id="authCodeh3">Enter authorization Code to Access Door Controls:</h3>
-     <input type="password" id="authCode" placeholder="Enter the Code we sent you!" />
+     <input type="number" id="authCode" placeholder="Enter the Code we sent you!" />
      <button id="btnCheckCode">Verifica Codice</button>
      <div id="controlPanel">
          
