--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
      <h3 id="authCodeh3">Enter authorization Code to Access Door Controls:</h3>
      <input type="number" id="authCode" placeholder="Enter the Code we sent you!" />
-     <button id="btnCheckCode">Verifica Codice</button>
+     <button id="btnCheckCode">Submit</button>
      <div id="controlPanel">
          
          <h5>"Attention: You only have 3 clicks. Use the button for check-in only."</h5>
