--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@
 </div>
 
 
-    <!-- <a href="sms:+393898883634?body=Main21220" class="sms-btn">SMS Main Door</a>
-<br><br> -->
-  
     
        <br><br>
      <div class="button-book">
@@ -78,7 +75,7 @@
           href="https://api.whatsapp.com/send?phone=+393898883634&text=Hi if you need more info send a message ...."
         ><i class="fa-brands fa-whatsapp"></i> </a>
     </div>
-    <div class="important">
+    <div class="important" id="important">
       <h3>'IMPORTANT' <br>Before sending the code, According to Italian law I have to register you on the portal dedicated to tourists, and for this I will need everyone's passport photos, which you can send me on Aibnb/Booking or even on WhatsApp
       </h3>
     </div>
