--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <header>
       <h3>MusArt</h3>
     </header>
-
+    
     <div class="content-wrapper">
       <h3>Check-in info</h3>
-      <h3>All steps you need to follow for check-in</h3>
-
       <div class="video-container">
         <video controls onloadstart="this.volume=0.1">
           <source src="check-in4.mp4" type="video/mp4" />
@@ -47,21 +45,22 @@
     </div>
 
     <!-- Popups -->
-    <div id="popup-MainDoor" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title-MainDoor"></h2>
-        <p id="popup-text-MainDoor"></p>
-        <button onclick="closePopup('MainDoor')">Close</button>
-      </div>
-    </div>
+   <!-- Aggiunto classe "initial-hidden" ai popup -->
+<div id="popup-MainDoor" class="popup initial-hidden">
+  <div class="popup-content">
+    <h2 id="popup-title-MainDoor"></h2>
+    <p id="popup-text-MainDoor"></p>
+    <button onclick="closePopup('MainDoor')">Close</button>
+  </div>
+</div>
 
-    <div id="popup-AptDoor" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title-AptDoor"></h2>
-        <p id="popup-text-AptDoor"></p>
-        <button onclick="closePopup('AptDoor')">Close</button>
-      </div>
-    </div>
+<div id="popup-AptDoor" class="popup initial-hidden">
+  <div class="popup-content">
+    <h2 id="popup-title-AptDoor"></h2>
+    <p id="popup-text-AptDoor"></p>
+    <button onclick="closePopup('AptDoor')">Close</button>
+  </div>
+</div>
 
     <div class="contact-section">
       <h3>If you have any question contact us directly</h3>
