--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div id="popup-AptDoor" class="popup initial-hidden">
+<div id="popup-AptDoor" class="popup">
   <div class="popup-content">
     <h2 id="popup-title-AptDoor"></h2>
     <p id="popup-text-AptDoor"></p>
