--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Popups -->
    <!-- Aggiunto classe "initial-hidden" ai popup -->
-<div id="popup-MainDoor" class="popup initial-hidden">
+<div id="popup-MainDoor" class="popup">
   <div class="popup-content">
     <h2 id="popup-title-MainDoor"></h2>
     <p id="popup-text-MainDoor"></p>
