--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <!-- <h2 class="section-title">MusArt <br>Check-in Informatio</h2> -->
       
       <div class="security-notice">
-        <h5><i class="fa-solid fa-unlock-keyhole"></i> MusArt check-in information</h5>
-        <p>All steps you need to follow for a smoth check-in!</p>
+        <h5><i class="fa-solid fa-unlock-keyhole"></i>  MusArt check-in information</h5>
+        <p>All steps you need to follow for a smooth check-in!</p>
       </div>
       
       <div class="video-container">
