--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <i class="fas fa-shield-alt" style="font-size: 4rem; margin-bottom: 20px;"></i>
     <h2>Access Revoked</h2>
     <p>The security session has expired. For security reasons, access has been disabled.</p>
-    <p>To request a new access code, please contact support.</p>
-    <a class="btn btn-error" href="https://api.whatsapp.com/send?phone=+393898883634&text=Hi, I need a new access code">
-      <i class="fab fa-whatsapp"></i> Assistance
+    
+    <a class="btn btn-error" href="https://api.whatsapp.com/send?phone=+393898883634&text=Hi, I need assistance ">
+      <i class="fab fa-whatsapp"></i> Need Assistance
     </a>
   </div>
  
-  <div class="container">
+  <div class="container" id="test2">
     <div class="section fade-in">
       <!-- <h2 class="section-title">MusArt <br>Check-in Informatio</h2> -->
       
