--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <div id="expiredOverlay" class="expired-overlay hidden">
     <i class="fas fa-shield-alt" style="font-size: 4rem; margin-bottom: 20px;"></i>
-    <h2>Access Revoked</h2>
-    <p>The security session has expired. For security reasons, access has been disabled.</p>
+    <h2>Access Expired</h2>
+    <p>The security session has expired. Access has been disabled. <BR>404 error</BR></p>
     
     <a class="btn btn-error" href="https://api.whatsapp.com/send?phone=+393898883634&text=Hi, I need assistance ">
       <i class="fab fa-whatsapp"></i> Need Assistance
