--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- <h2 class="section-title">MusArt <br>Check-in Informatio</h2> -->
       
       <div class="security-notice">
-        <h5><i class="fa-solid fa-unlock-keyhole"></i>  MusArt check-in information</h5>
+        <h5><i class="fa-solid fa-door-open"></i>  MusArt check-in</h5>
         <p>All steps you need to follow for a smooth check-in!</p>
       </div>
       
@@ -67,7 +67,7 @@
               <i class="fas fa-key"></i> Unlock Apartment Door
             </button>
           </div>
-
+          <br>
             <div class="warning-box" id="warning-box">
             <h5><i class="fas fa-exclamation-triangle"></i> Limited Access</h5>
             <p>You have only 3 uses for each button. The system will automatically deactivate after 24 hours.</p>
