--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <br>
             <div class="warning-box" id="warning-box">
             <h5><i class="fas fa-exclamation-triangle"></i> Limited Access</h5>
-            <p>You have only 3 uses for each button. The system will automatically deactivate after 24 hours.</p>
+            <p>You have only 2 clicks for each button. Use the button for check-in only. <br>The system will automatically deactivate after 24 hours.</p>
           </div>
           
           <!-- <div class="status-bar">
