--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
  
   <div class="container" id="test2">
     <div class="section1 fade-in">
-      <!-- <h2 class="section-title">MusArt <br>Check-in Informatio</h2> -->
+      <h2 class="section-title">MusArt <br>Check-in Information</h2>
       
-      <div class="security-notice">
-        <h5><i class="fa-solid fa-door-open"></i>  MusArt check-in</h5>
+      <!-- <div class="security-notice">
+         <h5><i class="fa-solid fa-door-open"></i>  MusArt check-in</h5>
         <p>All steps you need to follow for a smooth check-in!</p>
-      </div>
+      </div> --> 
       
       <div class="video-container">
         <video controls onloadstart="this.volume=0.1">
