--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
           <br>
             <div class="warning-box" id="warning-box">
             <h5><i class="fas fa-exclamation-triangle"></i> Limited Access</h5>
-            <p>You have only 2 clicks for each button. Use the button for check-in only. <br>The system will automatically deactivate after 24 hours.</p>
+            <<p>
+  Each button can be used a maximum of <strong>2 times</strong>.  
+  Please use it only for check-in. <br>  
+  Access will automatically expire 12 hours after the first click.
+</p>
           </div>
           
           <!-- <div class="status-bar">
