--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
           <br>
             <div class="warning-box" id="warning-box">
             <h5><i class="fas fa-exclamation-triangle"></i> Limited Access</h5>
-            <<p>
+            <p>
   Each button can be used a maximum of <strong>2 times</strong>.  
-  Please use it only for check-in. <br>  
+  Please use it only for check-in. <br><br>  
   Access will automatically expire 12 hours after the first click.
 </p>
           </div>
