--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif&display=swap"
       rel="stylesheet"
     />
+     <link rel="icon" type="image/x-icon" href="N0-key.ico">
     <!-- Aggiungi questi script nell'head di index.html -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
@@ -51,7 +52,7 @@
         </div>
 
         <div class="video-container">
-          <video controls onloadstart="this.volume=1.0">
+          <video controls onloadstart="this.volume=0.1">
             <source src="check-in42.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
