--- a/index.html
+++ b/index.html
@@ -255,25 +255,33 @@
 
       <div style="text-align: center; margin: 20px 0">
         <a href="#wifi-popup" class="btn btn-secondary">
-          <i class="fas fa-wifi"></i> Wi-Fi Information
+          <i class="fas fa-wifi"></i> Wi-Fi / Indications
         </a>
       </div>
 
       <div id="wifi-popup" class="wifi-popup">
         <div class="wifi-popup-content">
           <a href="#" class="wifi-popup-close">&times;</a>
-          <h3>Wi-Fi Information</h3>
+          <h3>Wi-Fi / Indications</h3>
           <p>
-            If you don't have mobile internet when you arrive, you can still
+            If you don't have mobile internet when you arrive for opening the door, you can still
             connect to our Wi-Fi standing in front door.
           </p>
 
           <div class="wifi-info">
             <strong>Network Name:</strong>
             Vodafone-E45457264
-            <br /><br />
+            <br />
             <strong>Password:</strong>
             JxPdn3db7C2nPGnc
+          </div>
+           <div class="wifi-info">
+            <strong>Indications:</strong>
+           click on pin to open the google maps 
+            <br/><br>
+            <a href="https://maps.app.goo.gl/ewJ6dGh3HXpaPmBF8"><i class="fa-solid fa-location-dot" style="color: #ff5a5f; font-size:2rem;"></i></a>
+          </div>
+            
           </div>
         </div>
       </div>
