--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </div>
            <div class="wifi-info">
             <strong>Indications:</strong>
-           click on pin to open google maps Indication
+           click on pin to open google maps Indications
             <br/><br>
             <a href="https://maps.app.goo.gl/ewJ6dGh3HXpaPmBF8"><i class="fa-solid fa-location-dot" style="color: #ff5a5f; font-size:2rem;"></i></a>
           </div>
