--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <p>
                 Each button can be used a maximum of <strong>2 times</strong>.
                 Please use it only for check-in. <br /><br />
-                Access will automatically expire 12 hours after the first click.
+                Access will automatically expire 24 hours.
               </p>
             </div>
 
