--- a/admin.html
+++ b/admin.html
@@ -209,7 +209,7 @@
             <input
               type="number"
               id="linkUsage"
-              value="10"
+              value="5"
               min="1"
               max="10"
               class="login-input"
@@ -399,6 +399,6 @@
       </div>
     </div>
 
-    <script defer src="admin.js?v=3.0"></script>
+    <script defer src="admin.obf.js?v=3.0 "></script>
   </body>
 </html>
