--- a/index.html
+++ b/index.html
@@ -423,6 +423,6 @@
       </div>-->
     </div>
 
-    <script src="app.js?v=3.0"></script>
+    <script src="app.obf.js?v=3.0"></script>
   </body>
 </html>
