--- a/index.html
+++ b/index.html
@@ -423,6 +423,6 @@
       </div>-->
     </div>
 
-    <script src="app.obf.decoded.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
