--- a/admin.html
+++ b/admin.html
@@ -399,6 +399,6 @@
       </div>
     </div>
 
-    <script defer src="admin.obf.js"></script>
+    <script defer src="admin.obf.js?v=3.0"></script>
   </body>
 </html>
