--- a/admin.html
+++ b/admin.html
@@ -230,7 +230,7 @@
 
           <div class="input-group">
             <label for="generatedSecureLink">Link sicuro generato</label>
-            <input
+            <input class="a12"
               type="text"
               id="generatedSecureLink"
               readonly
